--- a/src/main/webapp/assets/css/global.css
+++ b/src/main/webapp/assets/css/global.css
@@ -30,12 +30,41 @@ body{
     border-radius: 3px;
     border : 1px solid #DFDFDF;
     margin : 5px;
+    width: 250px;
+    position: relative;
+    float: left;
+    background-color: #292B2C;
+    color: white;
+}
+.card-delete{
+    color: white;
+    cursor: pointer;
+    background-color: crimson;
+    position: absolute;
+    right: 0;
+    padding : 1.5px;
+    top: 0;
 }
 .card-title{
 
 }
+.card-image{
+    display: block;
+    width : 100%;
+    height : 180px;
+}
 .card-content{
     padding : 8px;
+}
+.card-content-desc{
+
+}
+
+#photo_url_container{
+    overflow-x: scroll;
+}
+#photo_url{
+
 }
 /*card styles*/
 
